# NIRFASTSlicer

./: CMakeLists.txt  CONTRIBUTING.md  CTestConfig.cmake  LICENSE  README.md
Applications/App/: CMakeLists.txt  Main.cxx  qAppAboutDialog.cxx  qAppMainWindow.cxx  qAppMainWindow.h
Applications/App/Resources/Icons/Medium/: App.icns
Applications/App/Resources/Icons/XLarge/: DesktopIcon.icns
Applications/App/Widgets/: qAppStyle.cxx
CMake/: ApplicationConfig.cmake.in  DashboardTemplate.cmake
CMake/Superbuild/: CMakeLists.txt  External_NIRFASTSlicer.cmake  External_NIRView.cmake  External_Slicer.cmake
Modules/: CMakeLists.txt
Modules/CLI/: CMakeLists.txt
Modules/CLI/Mesh2Image/: CMakeLists.txt  Mesh2Image.cxx  Mesh2Image.xml
Modules/CLI/Mesh2ImageCLI/: CMakeLists.txt  Mesh2ImageCLI.cxx  Mesh2ImageCLI.xml
Modules/MatlabModules/: AddPath  AddPath.bat  AddPath.m  AddPath.xml  CMakeLists.txt  Image2Mesh  Image2Mesh.bat  Image2Mesh.m  Image2Mesh.xml  NIRFASTSlicerMatlabModulesConfigure.h.in  NIRFast  NIRFast.m  NIRFast.m.in  NIRFast.xml  NIRViewMatLabModulesConfigure.h.in  Nirfast2Vtk  Nirfast2Vtk.bat  Nirfast2Vtk.m  Nirfast2Vtk.xml  SavePath  SavePath.bat  SavePath.m  SavePath.xml  Threshold  Threshold.m  Threshold.xml
Modules/Scripted/: CMakeLists.txt
Modules/Scripted/CreateMesh/: CMakeLists.txt  CreateMesh.py
Modules/Scripted/Home/: CMakeLists.txt  Home.py
Modules/Scripted/Mesh2Image/: CMakeLists.txt  Mesh2Image.py
